@@ -8,7 +8,11 @@ on:
 jobs:
   build:
     name: Create Release
-    runs-on: macos-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        python-version: ["3.10"]
+        os: [macos-latest, windows-latest]
     steps:
     - name: Set env
       run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
@@ -16,47 +20,37 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
         # install our patched version of pyqtgraph
         pip install -e .[GUI]
-    - name: Build app
+    - name: Build macOS app
+      if: runner.os == 'macOS'
       working-directory: ./build-recipes
       run: |
         bash ./macos_build_app.sh DCOR-Aid ${{ env.RELEASE_VERSION }}
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+    - name: Build windows executable
+      if: runner.os == 'windows'
+      working-directory: ./build-recipes
+      run: |
+        pip install -r win_build_requirements.txt
+        pyinstaller -y --log-level=WARN win_DCOR-Aid.spec
+        # Run the binary (the most simple test)
+        dist\\DCOR-Aid\\DCOR-Aid.exe --version
+        python win_make_iss.py
+        ISCC.exe /Q win_dckit.iss
+    - name: Release Assets
+      uses: softprops/action-gh-release@v1
       with:
-        tag_name: ${{ github.ref }}
-        release_name: DCOR-Aid ${{ github.ref }}
-        body: |
-          ![](https://img.shields.io/github/downloads/DCOR-dev/DCOR-Aid/${{ env.RELEASE_VERSION }}/total.svg)
-
+        name: DCOR-Aid ${{ env.RELEASE_VERSION }}
         draft: true
         prerelease: false
-    - name: Upload Release Asset DMG
-      id: upload-release-asset-dmg
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-        asset_path: ./build-recipes/dist/DCOR-Aid_${{ env.RELEASE_VERSION }}.dmg
-        asset_name: DCOR-Aid_${{ env.RELEASE_VERSION }}.dmg
-        asset_content_type: application/zip
-    - name: Upload Release Asset PGK
-      id: upload-release-asset-pkg
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-        asset_path: ./build-recipes/dist/DCOR-Aid.pkg
-        asset_name: DCOR-Aid.pkg
-        asset_content_type: application/zip
+        body: |
+            ![](https://img.shields.io/github/downloads/DCOR-dev/DCOR-Aid/${{ env.RELEASE_VERSION }}/total.svg)
+        files: |
+          ./build-recipes/dist/*.dmg
+          ./build-recipes/dist/*.pkg
+          ./build-recipes/Output/*.exe
