@@ -1,7 +1,7 @@
 |DCOR-Aid|
 ==========
 
-|PyPI Version| |Build Status Unix| |Tests Status Win| |Coverage Status|
+|PyPI Version| |Build Status| |Coverage Status|
 
 
 DCOR-Aid is a GUI for managing data on DCOR (https://dcor.mpl.mpg.de).
@@ -35,9 +35,7 @@ By default, testing is done with https://dcor-dev.mpl.mpg.de and the user
 .. |DCOR-Aid| image:: https://raw.github.com/DCOR-dev/DCOR-Aid/master/dcoraid/img/dcoraid_text.png
 .. |PyPI Version| image:: https://img.shields.io/pypi/v/dcoraid.svg
    :target: https://pypi.python.org/pypi/DCOR-Aid
-.. |Build Status Unix| image:: https://img.shields.io/github/actions/workflow/status/DCOR-dev/DCOR-Aid/check.yml
+.. |Build Status| image:: https://img.shields.io/github/actions/workflow/status/DCOR-dev/DCOR-Aid/check.yml
    :target: https://github.com/DCOR-dev/DCOR-Aid/actions?query=workflow%3AChecks
-.. |Tests Status Win| image:: https://img.shields.io/appveyor/ci/paulmueller/DCOR-Aid/master.svg?label=tests_win
-   :target: https://ci.appveyor.com/project/paulmueller/DCOR-Aid
 .. |Coverage Status| image:: https://img.shields.io/codecov/c/github/DCOR-dev/DCOR-Aid/master.svg
    :target: https://codecov.io/gh/DCOR-dev/DCOR-Aid
